# fmmap

./: .codecov.yml  .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  coverage.yml  loc.yml  rust.yml
benchmarks/: Cargo.toml
fmmap/: Cargo.toml
fmmap-dart/: Cargo.toml
fmmap-js/: Cargo.toml
fmmap-py/: Cargo.toml
fmmap-py/src/: lib.rs
fmmap-rs/: Cargo.toml  README.md
fmmap-rs/src/: disk.rs  empty.rs  error.rs  lib.rs  memory.rs  metadata.rs  mmap_file.rs  options.rs  reader.rs  tests.rs  utils.rs  writer.rs
fmmap-rs/src/disk/: async_std_impl.rs  smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap-rs/src/empty/: async_std_impl.rs  smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap-rs/src/memory/: async_std_impl.rs  smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap-rs/src/metadata/: unix.rs  windows.rs
fmmap-rs/src/mmap_file/: async_std_impl.rs  smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap-rs/src/options/: async_std_impl.rs  smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap-rs/src/reader/: async_std_impl.rs  smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap-rs/src/utils/: smol_impl.rs  tokio_impl.rs
fmmap-rs/src/writer/: async_std_impl.rs  smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap-uniffi/: Cargo.toml
fmmap/src/: disk.rs  empty.rs  error.rs  lib.rs  memory.rs  metadata.rs  mmap_file.rs  options.rs  reader.rs  tests.rs  utils.rs  writer.rs
fmmap/src/disk/: smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap/src/empty/: smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap/src/memory/: smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap/src/metadata/: unix.rs  windows.rs
fmmap/src/mmap_file/: smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap/src/options/: smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap/src/reader/: smol_impl.rs  sync_impl.rs  tokio_impl.rs
fmmap/src/writer/: smol_impl.rs  sync_impl.rs  tokio_impl.rs
scripts/: 2904691610.txt
tests-integration/: Cargo.toml
