[package]
name = "fmmap"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/al8n/fmmap/tree/main/fmmap-rs"
description = "A flexible and convenient high-level mmap for zero-copy file I/O."
license = "MIT OR Apache-2.0"
authors = ["Al Liu <scygliu@gmail.com>"]
documentation = "https://docs.rs/fmmap"
keywords = ["file", "memmapix", "mmap", "memory-map", "io"]
categories = ["filesystem", "external-ffi-bindings", "asynchronous"]

[lib]
doctest = true

[features]
default = ["sync"]
nightly = []
sync = ["fs4/sync"]
tokio-async = ["fs4/tokio-async", "async-trait", "pin-project-lite", "tokio/io-std", "tokio/io-util", "tokio/fs"]
smol-async = ["fs4/smol-async", "async-trait", "pin-project-lite", "smol"]
std-async = ["fs4/std-async", "async-trait", "pin-project-lite", "async-std/async-io", "async-std/futures-lite", "futures-util/io"]

[dependencies]
async-std = { version = "1.12", optional = true }
async-trait = { version = "0.1", optional = true }
bytes = "1.2"
byteorder = "1.4"
enum_dispatch = "0.3"
fs4 = { version = "0.6", optional = true }
futures-util = { version = "0.3", optional = true }
memmapix = "0.6"
pin-project-lite = { version = "0.2", optional = true }
parse-display = "0.6"
smol = { version = "1.2", optional = true }
tokio = { version = "1.21", optional = true }

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
ctor = "0.1"
criterion = "0.3.5"
rand = "0.8.4"
smol-potat = "1.1.2"
scopeguard = "1.1.0"
tempdir = "0.3.7"
tokio = { version = "1.21", features = ["full"]}
tokio-test = "0.4.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

