[package]
name = "fmmap"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/al8n/fmmap/tree/main/fmmap-rs"
description = "A flexible and convenient high-level mmap for zero-copy file I/O."
license = "MIT OR Apache-2.0"
authors = ["Al Liu <scygliu@gmail.com>"]
documentation = "https://docs.rs/fmmap"
keywords = ["file", "memmapix", "mmap", "memory-map", "io"]
categories = ["filesystem", "external-ffi-bindings", "asynchronous"]
rust-version = "1.65.0"

[lib]
doctest = true

[features]
default = ["sync"]
nightly = []
sync = ["dep:fs4", "fs4?/sync"]
tokio = ["dep:tokio", "fs4/tokio", "dep:pin-project-lite", "tokio?/io-std", "tokio?/io-util", "tokio?/fs"]
smol = ["dep:smol", "fs4/smol", "dep:pin-project-lite"]
async-std = ["dep:async-std", "fs4/async-std", "dep:pin-project-lite", "async-std?/async-io", "async-std?/futures-lite", "dep:futures-util", "futures-util?/io"]


[dependencies]
async-std = { version = "1", optional = true }
bytes = "1"
byteorder = "1"
enum_dispatch = "0.3"
fs4 = { version = "0.12", optional = true }
futures-util = { version = "0.3", optional = true }
memmapix = "0.7"
pin-project-lite = { version = "0.2", optional = true }
parse-display = "0.10"
smol = { version = "2", optional = true }
tokio = { version = "1", optional = true }

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
ctor = "0.3"
criterion = "0.5"
rand = "0.9"
smol-potat = "1"
scopeguard = "1.2"
tempdir = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
