[package]
name = "fmmap"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/al8n/fmmap/tree/main/fmmap-rs"
description = "A flexible and convenient high-level mmap for zero-copy file I/O."
license = "MIT OR Apache-2.0"
authors = ["Al Liu <scygliu@gmail.com>"]
documentation = "https://docs.rs/fmmap"
keywords = ["file", "memmap2", "mmap", "memory-map", "io"]
categories = ["filesystem", "asynchronous", "memory-management"]
rust-version = "1.75.0"

[lib]
doctest = true

[features]
default = ["sync"]
sync = ["dep:fs4", "fs4?/sync"]
tokio = ["dep:tokio", "fs4/tokio", "dep:pin-project-lite", "tokio?/io-std", "tokio?/io-util", "tokio?/fs", "tokio?/rt"]
smol = ["dep:smol", "fs4/smol", "dep:pin-project-lite"]

[dependencies]
bytes = "1"
byteorder = "1"
enum_dispatch = "0.3"
fs4 = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }
memmapix = "0.9"
pin-project-lite = { version = "0.2", optional = true }
smol = { version = "2", optional = true }
tokio = { version = "1", optional = true }

# Unix: rustix is used for the safe POSIX path of identity-checked
# delete (`statat`/`unlinkat` against an open parent fd) and for atomic
# CLOEXEC fd duplication (`fcntl_dupfd_cloexec`). `rustix` returns an
# `OwnedFd` directly, which avoids the borrowed-vs-owned hazard of
# `libc::fcntl` + `File::from_raw_fd`.
[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }

# Windows: `GetFileInformationByHandle` for real (volume serial, file
# index) identity on stable Rust (no nightly `windows_by_handle`), plus
# `DuplicateHandle` for the async-handle identity capture (same
# panic-safety reasoning as `libc::dup` on Unix).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
ctor = "0.12"
criterion = "0.8"
smol-potat = "1"
scopeguard = "1.2"
tempdir = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
